--- a/app.json
+++ b/app.json
@@ -1,11 +1,14 @@
 {
   "pages": [
-    "pages/index/index"
+    
+    "pages/list/list",
+    "pages/index/index",
+    "pages/detail/detail"
   ],
   "window": {
-    "navigationBarBackgroundColor": "#8ED145",
+    "navigationBarBackgroundColor": "#489B81",
     "navigationBarTitleText": "welcome to music",
-    "navigationBarTextStyle": "black"
+    "navigationBarTextStyle": "white"
   },
   "sitemapLocation": "sitemap.json"
 }
