--- a/app.json
+++ b/app.json
@@ -1,14 +1,31 @@
 {
   "pages": [
-    
-    "pages/list/list",
     "pages/index/index",
-    "pages/detail/detail"
+    "pages/movies/movies",
+    "pages/list/list",
+    "pages/detail/detail",
+    "pages/moviesDetail/moviesDetail"
   ],
   "window": {
     "navigationBarBackgroundColor": "#489B81",
     "navigationBarTitleText": "welcome to music",
     "navigationBarTextStyle": "white"
+  },
+  "tabBar": {
+    "list": [
+      {
+        "pagePath": "pages/list/list",
+        "text": "文与字",
+        "iconPath": "images/tab/yuedu.png",
+        "selectedIconPath": "images/tab/yuedu_hl.png"
+      },
+      {
+        "pagePath": "pages/movies/movies",
+        "text": "电影",
+        "iconPath": "images/tab/dianying.png",
+        "selectedIconPath": "images/tab/dianying_hl.png"
+      }
+    ]
   },
   "sitemapLocation": "sitemap.json"
 }
